<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="30dp"
        android:text="@string/tips"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_tips"
        />
    <Button
        android:id="@+id/btn_small"
        android:text="@string/small"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:icon="@drawable/glass_fill_water_drink_bottle_cup_mug_svgrepo_com"
        />

    <Button
        android:id="@+id/btn_medium"
        android:text="@string/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/glass_fill_water_drink_bottle_cup_mug_svgrepo_com"
        app:layout_constraintStart_toEndOf="@id/btn_small"
        app:layout_constraintEnd_toStartOf="@id/btn_large"
        app:layout_constraintTop_toTopOf="@id/btn_small"
        />

    <Button
        android:id="@+id/btn_large"
        android:text="@string/large"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/btn_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_small"
        android:layout_marginRight="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/glass_fill_water_drink_bottle_cup_mug_svgrepo_com"
        />
    
    <TextView 
        android:id="@+id/text_today"
        android:text="@string/today"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_result"
        android:text="0ml"
        tools:text="500ml"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_today"
        android:textSize="52sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


</androidx.constraintlayout.widget.ConstraintLayout>